Изменение цвета кнопки
Изменение цвета на золотой для кнопки в формах

--- a/pages/index.css
+++ b/pages/index.css
@@ -203,7 +203,7 @@ textarea{
 
 /*Кнопка при наведении*/
 #button:hover{
-    background-color:cornflowerblue;
+    background-color:gold;
 }
 
     /*Подвал сайта*/
