--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-    /*Общие свойства всех страниц*/
+/*Общие свойства всех страниц*/
 
 /*Исключение браузерной таблицы стилей*/
 *{
@@ -6,7 +6,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
 }
 
 /*Фоновый цвет всех страниц*/
@@ -76,6 +75,7 @@ nav a:hover{
 .menu_name{
     border: none;
     color: #fdf4dc;
+    font-size: medium;
     background-color: rgb(41, 50, 65, 0);
     font-weight: bold;
     height: 100%
@@ -88,8 +88,8 @@ main{
 }
 
 /*Медиа-запрос для адаптации*/
-@media (max-width: 1000px) {main{flex-direction: column;} }
-@media (max-width: 1000px) {div.main_picture{height: 25vh;} }
+@media (max-width: 1100px) {main{flex-direction: column;} }
+@media (max-width: 1100px) {div.main_picture{height: 25vh;} *{font-size: medium;}}
 
 /*Внутренние настройки блоков*/
 nav, .main, aside{
@@ -151,6 +151,20 @@ aside{
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
+.title{
+    text-align: center;
+    padding: 1rem;
+    color: white;
+    background-color: rgb(41, 50, 65, 0.3);
+    width: 100%;
+}
+
+.title p{
+    font-size: medium;
 }
 
 .body img:first-child{
@@ -158,25 +172,10 @@ aside{
 }
 
 
-
-
-
-
-
 /*Особенность хидера основной страницы*/
 #main_header{
     position: absolute;
     top: 0;
-}
-
-/*Заголовок страницы*/
-#title{
-    width: 100%;
-    padding: 2rem;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    background-color: rgb(0, 0, 0, 0.9);
 }
 
     /*Контакты*/
@@ -240,5 +239,3 @@ footer{
     align-items: center;
     background-color: rgb(41, 50, 65, 0.3);
 }
-
-
